Adding barebones resume info.

--- a/app/views/resume/show.html.erb
+++ b/app/views/resume/show.html.erb
@@ -1,2 +1,85 @@
-<h1>RESUME!</h1>
-<p>Find me in app/views/resume/index.html.erb</p>
+<p>
+  <h1>Jaxon Avena</h1>
+  <h3>Studying Computer Science at the University of Kansas</h3>
+
+  <div>
+  914 Lawrence Avenue
+  Lawrence, KS 66049
+  (913) 227-9172
+  jaxonavena@gmail.com
+  LinkedIn - Jaxon Avena
+  Github - jaxonavena
+  </div>
+
+  <h4>WORK EXPERIENCE</h4>
+Logie's on Mass, Lawrence, KS — Security
+October 2022 - Current
+Interact with roughly 1000 members of the public every shift
+Navigate stressful and chaotic situations in a calm and professional manner
+Communicate and collaborate efficiently  with coworkers to maintain a safe environment for patrons
+Jersey Mike's, Lenexa, KS — Cook, Cashier
+March 2020 - August 2022
+Delegated assignments as shift needs arose
+Handled first wave of customer relations in a busy environment
+Contributed to an organized workplace by being detail-oriented and providing customers with an excellent experience
+Maintained my own schedule
+Avena Freelance Landscaping, Overland Park, KS — Co-Founder
+Summer 2016 - October 2020
+Created and maintained a network of weekly clients
+Utilized time management and organizational skills to meet deadlines
+  <h4>EDUCATION</h4>
+University of Kansas, Lawrence, KS — Computer Science
+August 2021 - May 2025
+Pursuing a Bachelor's degree  in Computer Science
+Anticipated graduation date: May 2025
+Olathe East High School, Olathe, KS
+August 2017 - May 2021
+  <h4>PROJECTS</h4>
+Geodle — KU Hackathon, Spring 2022
+Developed a simple geography focused, educational game from scratch in 36 hours  based off of the popular game "Wordle"
+Implemented entirely with Python, including the GUI using the pygame library
+Worked as part of a three man team
+Received $1000 for winning "Most Promising Start-Up"
+
+<h5>SOFT SKILLS</h5>
+
+
+Leadership
+Problem solving
+Effective communicator
+Creative
+
+<h5>HARD SKILLS</h5>
+
+
+Python
+C/C++ fundamentals
+HTML and CSS fundamentals
+Ruby fundamentals
+Git
+
+<h5>HONORS</h5>
+
+University of Kansas -
+School of Engineering Chancellor's Scholarship
+Honor Roll Fall/Spring 2022
+
+Olathe East High School -
+4 year Honor Roll student
+2021 Most Outstanding Male Athlete
+Recipient of the "Seal of Biliteracy" for Spanish
+
+<h5>EXTRA-CURRICULARS</h5>
+
+Ground Theory Brazilian Jiu Jitsu Current extra-curricular activity
+
+Olathe East High School -
+Varsity Wrestler and team captain, 3x State Qualifier, 1x 3rd place State Placer
+Varsity Football player and team captain
+
+Boy Scouts of America - 8 year participant
+
+
+
+
+</p>
