Removed some personal information from the public repo.

--- a/app/views/resume/show.html.erb
+++ b/app/views/resume/show.html.erb
@@ -4,9 +4,6 @@
   <hr>
 
   <div>
-  914 Lawrence Avenue <br>
-  Lawrence, KS 66049 <br>
-  (913) 227-9172 <br>
   jaxonavena@gmail.com <br>
   LinkedIn - Jaxon Avena <br>
   Github - jaxonavena <br>
@@ -78,7 +75,7 @@
         <li>Python</li>
         <li>C/C++ fundamentals</li>
         <li>HTML and CSS fundamentals</li>
-        <li>Ruby fundamentals</li>
+        <li>Ruby and Ruby on Rails fundamentals</li>
         <li>Git</li>
         <li>UML</li>
       </ul>
