Added Contact Me page.

--- a/app/views/resume/show_home.html.erb
+++ b/app/views/resume/show_home.html.erb
@@ -3,11 +3,7 @@
   <h3>Studying Computer Science at the University of Kansas</h3>
   <hr>
 
-  <div>
-  jaxonavena@gmail.com <br>
-  LinkedIn - Jaxon Avena <br>
-  Github - jaxonavena <br>
-  </div>
+  <%= link_to 'Contact Me', contact_me_path %>
 
   <h4><em>WORK EXPERIENCE</em></h4>
     <div>
