Split everything into separate pages.

--- a/app/views/contact_me/show_contact.html.erb
+++ b/app/views/contact_me/show_contact.html.erb
@@ -1,5 +1,9 @@
 <body>
   <%= link_to 'Home', resume_path %>
+  <%= link_to 'Experience', experience_path %>
+  <%= link_to 'Education', education_path %>
+  <%= link_to 'Projects', projects_path %>
+  <%= link_to 'About Me', about_me_path %>
 
   <div>
   jaxonavena@gmail.com <br>
