--- a/app/views/resume/show_home.html.erb
+++ b/app/views/resume/show_home.html.erb
@@ -4,114 +4,12 @@
   <hr>
 
   <%= link_to 'Contact Me', contact_me_path %>
-
-  <h4><em>WORK EXPERIENCE</em></h4>
-    <div>
-      Logie's on Mass, Lawrence, KS — Security <br>
-      October 2022 - Current <br>
-      <ul>
-        <li>Interact with roughly 1000 members of the public every shift</li>
-        <li>Navigate stressful and chaotic situations in a calm and professional manner</li>
-        <li>Communicate and collaborate efficiently  with coworkers to maintain a safe environment for patrons</li>
-      </ul>
-
-      Jersey Mike's, Lenexa, KS — Cook, Cashier <br>
-      March 2020 - August 2022 <br>
-      <ul>
-        <li>Delegated assignments as shift needs arose </li>
-        <li>Handled first wave of customer relations in a busy environment </li>
-        <li>Contributed to an organized workplace by being detail-oriented and providing customers with an excellent experience </li>
-        <li>Maintained my own schedule </li>
-      </ul>
-
-      Avena Freelance Landscaping, Overland Park, KS — Co-Founder <br>
-      Summer 2016 - October 2020 <br>
-      <ul>
-        <li>Created and maintained a network of weekly clients </li>
-        <li>  Utilized time management and organizational skills to meet deadlines </li>
-      </ul>
-    </div>
-
-  <h4><em>EDUCATION</em></h4>
-    <div>
-      University of Kansas, Lawrence, KS — Computer Science<br>
-      August 2021 - May 2025<br>
-      <ul>
-        <li>Pursuing a Bachelor's degree  in Computer Science</li>
-        <li>Anticipated graduation date: May 2025</li>
-      </ul>
-      Olathe East High School, Olathe, KS<br>
-      August 2017 - May 2021
-    </div>
-
-  <h4><em>PROJECTS</em></h4>
-    <div>
-      Geodle — KU Hackathon, Spring 2022<br>
-      <ul>
-        <li>Developed a simple geography focused, educational game from scratch in 36 hours  based off of the popular game "Wordle"</li>
-        <li>Implemented entirely with Python, including the GUI using the pygame library</li>
-        <li>Worked as part of a three man team</li>
-        <li>Received $1000 for winning "Most Promising Start-Up"</li>
-      </ul>
-    </div>
-
-  <h5><em>SOFT SKILLS</em></h5>
-    <div>
-      <ul>
-        <li>Leadership</li>
-        <li>Problem solving</li>
-        <li>Effective communicator</li>
-        <li>Creative</li>
-      </ul>
-    </div>
-
-  <h5><em>HARD SKILLS</em></h5>
-    <div>
-      <ul>
-        <li>Python</li>
-        <li>C/C++ fundamentals</li>
-        <li>HTML and CSS fundamentals</li>
-        <li>Ruby and Ruby on Rails fundamentals</li>
-        <li>Git</li>
-        <li>UML</li>
-      </ul>
-    </div>
-
-  <h5><em>HONORS</em></h5>
-    <div>
-      University of Kansas -
-      <ul>
-        <li>School of Engineering Chancellor's Scholarship</li>
-        <li>Honor Roll Fall/Spring 2022</li>
-      </ul>
-
-      Olathe East High School -
-      <ul>
-        <li>4 year Honor Roll student</li>
-        <li>2021 Most Outstanding Male Athlete</li>
-        <li>Recipient of the "Seal of Biliteracy" for Spanish</li>
-      </ul>
-    </div>
-
-  <h5><em>EXTRA-CURRICULARS</em></h5>
-    <div>
-      Ground Theory Brazilian Jiu Jitsu -
-      <ul>
-        <li>Current extra-curricular activity</li>
-      </ul>
-
-      Olathe East High School -
-      <ul>
-        <li>Varsity Wrestler and team captain, 3x State Qualifier, 1x 3rd place State Placer</li>
-        <li>Varsity Football player and team captain</li>
-      </ul>
-
-      Boy Scouts of America -
-      <ul>
-        <li>8 year participant</li>
-      </ul>
-    </div>
-
-
+  <%= link_to 'Experience', experience_path %>
+  <%= link_to 'Education', education_path %>
+  <%= link_to 'Projects', projects_path %>
+  <%= link_to 'About Me', about_me_path %>
 
 </body>
+
+
+
