--- a/app/views/resume/show_home.html.erb
+++ b/app/views/resume/show_home.html.erb
@@ -1,15 +1,28 @@
-<body bgcolor = #ABD5CC>
-  <h1>Jaxon Avena</h1>
-  <h3>Studying Computer Science at the University of Kansas</h3>
-  <hr>
-
-  <%= link_to 'Contact Me', contact_me_path %>
-  <%= link_to 'Experience', experience_path %>
-  <%= link_to 'Education', education_path %>
-  <%= link_to 'Projects', projects_path %>
-  <%= link_to 'About Me', about_me_path %>
-
-</body>
+  <!DOCTYPE html>
+  <html>
+    <head>
+      <title>My Website</title>
+      <%= stylesheet_link_tag 'home', media: 'all' %>
+    </head>
 
 
+    <body>
+      <div class="welcome">
+          <h1>Hi, I'm Jaxon</h1>
+      </div>
+      <div class = "subtitle">
+            <h3>Studying Computer Science at the University of Kansas</h3>
+      </div>
+
+
+      <div class = "links">
+          <%= link_to 'Contact Me', contact_me_path %>
+          <%= link_to 'Experience', experience_path %>
+          <%= link_to 'Education', education_path %>
+          <%= link_to 'Projects', projects_path %>
+          <%= link_to 'About Me', about_me_path %>
+      </div>
+    </body>
+
+  </html>
 
