Finished beautifying homepage -- for now.

--- a/app/views/experience/show_experience.html.erb
+++ b/app/views/experience/show_experience.html.erb
@@ -1,4 +1,4 @@
-<body bgcolor = #ABD5CC>
+<body>
   <%= link_to 'Home', resume_path %>
   <%= link_to 'Contact Me', contact_me_path %>
   <%= link_to 'Education', education_path %>
