--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -12,8 +12,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 50vh;
-  padding-top: 125px;
+  padding-top: 300px;
   margin-bottom: 0px;
 }
 
@@ -37,7 +36,12 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 25vh;
+  margin-top: 0;
+  margin-bottom: 2rem;
+}
+
+h3 {
+  color: rgb(69, 69, 69);
 }
 
 .links{
@@ -51,4 +55,10 @@ h1 {
   align-items: center;
   height: 20vh;
   gap: 1rem;
+}
+
+.links a {
+  text-decoration: none;
+  color: rgb(92, 132, 157);
+  font-size: 1.2rem;
 }
