--- a/app/views/contact_me/show_contact.html.erb
+++ b/app/views/contact_me/show_contact.html.erb
@@ -1,4 +1,4 @@
-<body bgcolor = #ABD5CC>
+<body>
   <%= link_to 'Home', resume_path %>
   <%= link_to 'Experience', experience_path %>
   <%= link_to 'Education', education_path %>
