--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,21 @@
  *= require_tree .
  *= require_self
  */
+ .links{
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  font-family: Palatino;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 20vh;
+  gap: 1rem;
+}
+
+.links a {
+  text-decoration: none;
+  color: rgb(92, 132, 157);
+  font-size: 1.2rem;
+}
