--- a/app/views/education/show_education.html.erb
+++ b/app/views/education/show_education.html.erb
@@ -1,9 +1,12 @@
-<body>
-  <%= link_to 'Home', resume_path %>
-  <%= link_to 'Contact Me', contact_me_path %>
-  <%= link_to 'Experience', experience_path %>
-  <%= link_to 'Projects', projects_path %>
-  <%= link_to 'About Me', about_me_path %>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>My Website</title>
+    <%= stylesheet_link_tag 'application', media: 'all' %>
+  </head>
+
+
+  <body>
 
   <h4><em>EDUCATION</em></h4>
     <div>
@@ -16,4 +19,16 @@
       Olathe East High School, Olathe, KS<br>
       August 2017 - May 2021
     </div>
+
+  <div class = "links">
+    <%= link_to 'Home', resume_path %>
+    <%= link_to 'Contact Me', contact_me_path %>
+    <%= link_to 'Experience', experience_path %>
+    <%= link_to 'Projects', projects_path %>
+    <%= link_to 'About Me', about_me_path %>
+  </div>
 </body>
+
+</html>
+
+
