--- a/app/views/projects/show_projects.html.erb
+++ b/app/views/projects/show_projects.html.erb
@@ -1,18 +1,33 @@
-<body>
-  <%= link_to 'Home', resume_path %>
-  <%= link_to 'Contact Me', contact_me_path %>
-  <%= link_to 'Experience', experience_path %>
-  <%= link_to 'Education', education_path %>
-  <%= link_to 'About Me', about_me_path %>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>My Website</title>
+    <%= stylesheet_link_tag 'application', media: 'all' %>
+  </head>
 
-  <h4><em>PROJECTS</em></h4>
-    <div>
-      Geodle — KU Hackathon, Spring 2022<br>
-      <ul>
-        <li>Developed a simple geography focused, educational game from scratch in 36 hours  based off of the popular game "Wordle"</li>
-        <li>Implemented entirely with Python, including the GUI using the pygame library</li>
-        <li>Worked as part of a three man team</li>
-        <li>Received $1000 for winning "Most Promising Start-Up"</li>
-      </ul>
-    </div>
-</body>
+
+  <body>
+
+
+    <h4><em>PROJECTS</em></h4>
+      <div>
+        Geodle — KU Hackathon, Spring 2022<br>
+        <ul>
+          <li>Developed a simple geography focused, educational game from scratch in 36 hours  based off of the popular game "Wordle"</li>
+          <li>Implemented entirely with Python, including the GUI using the pygame library</li>
+          <li>Worked as part of a three man team</li>
+          <li>Received $1000 for winning "Most Promising Start-Up"</li>
+        </ul>
+      </div>
+
+      <div class = "links">
+        <%= link_to 'Home', resume_path %>
+        <%= link_to 'Contact Me', contact_me_path %>
+        <%= link_to 'Experience', experience_path %>
+        <%= link_to 'Education', education_path %>
+        <%= link_to 'About Me', about_me_path %>
+      </div>
+  </body>
+
+</html>
+
