--- a/app/views/resume/show_home.html.erb
+++ b/app/views/resume/show_home.html.erb
@@ -3,6 +3,7 @@
     <head>
       <title>My Website</title>
       <%= stylesheet_link_tag 'home', media: 'all' %>
+      <%= stylesheet_link_tag 'application', media: 'all' %>
     </head>
 
 
