--- a/app/views/education/show_education.html.erb
+++ b/app/views/education/show_education.html.erb
@@ -8,7 +8,10 @@
 
   <body>
 
-  <h4><em>EDUCATION</em></h4>
+    <div class="page_title">
+        <h1>Education</h1>
+    </div>
+
     <div>
       University of Kansas, Lawrence, KS — Computer Science<br>
       August 2021 - May 2025<br>
@@ -20,14 +23,14 @@
       August 2017 - May 2021
     </div>
 
-  <div class = "links">
-    <%= link_to 'Home', resume_path %>
-    <%= link_to 'Contact Me', contact_me_path %>
-    <%= link_to 'Experience', experience_path %>
-    <%= link_to 'Projects', projects_path %>
-    <%= link_to 'About Me', about_me_path %>
-  </div>
-</body>
+    <div class = "links">
+      <%= link_to 'Home', resume_path %>
+      <%= link_to 'Contact Me', contact_me_path %>
+      <%= link_to 'Experience', experience_path %>
+      <%= link_to 'Projects', projects_path %>
+      <%= link_to 'About Me', about_me_path %>
+    </div>
+  </body>
 
 </html>
 
