--- a/app/views/experience/show_experience.html.erb
+++ b/app/views/experience/show_experience.html.erb
@@ -9,7 +9,10 @@
   <body>
 
 
-  <h4><em>WORK EXPERIENCE</em></h4>
+    <div class="page_title">
+      <h1>Work Experience</h1>
+    </div>
+
     <div>
       Logie's on Mass, Lawrence, KS — Security <br>
       October 2022 - Current <br>
