--- a/app/views/about_me/show_about_me.html.erb
+++ b/app/views/about_me/show_about_me.html.erb
@@ -8,73 +8,76 @@
 
   <body>
 
-
-  <h5><em>SOFT SKILLS</em></h5>
-    <div>
-      <ul>
-        <li>Leadership</li>
-        <li>Problem solving</li>
-        <li>Effective communicator</li>
-        <li>Creative</li>
-      </ul>
+    <div class="page_title">
+        <h1>About Me</h1>
     </div>
 
-  <h5><em>HARD SKILLS</em></h5>
-    <div>
-      <ul>
-        <li>Python</li>
-        <li>C/C++ fundamentals</li>
-        <li>HTML and CSS fundamentals</li>
-        <li>Ruby and Ruby on Rails fundamentals</li>
-        <li>Git</li>
-        <li>UML</li>
-      </ul>
-    </div>
+    <h5><em>SOFT SKILLS</em></h5>
+      <div>
+        <ul>
+          <li>Leadership</li>
+          <li>Problem solving</li>
+          <li>Effective communicator</li>
+          <li>Creative</li>
+        </ul>
+      </div>
 
-  <h5><em>HONORS</em></h5>
-    <div>
-      University of Kansas -
-      <ul>
-        <li>School of Engineering Chancellor's Scholarship</li>
-        <li>Honor Roll Fall/Spring 2022</li>
-      </ul>
+    <h5><em>HARD SKILLS</em></h5>
+      <div>
+        <ul>
+          <li>Python</li>
+          <li>C/C++ fundamentals</li>
+          <li>HTML and CSS fundamentals</li>
+          <li>Ruby and Ruby on Rails fundamentals</li>
+          <li>Git</li>
+          <li>UML</li>
+        </ul>
+      </div>
 
-      Olathe East High School -
-      <ul>
-        <li>4 year Honor Roll student</li>
-        <li>2021 Most Outstanding Male Athlete</li>
-        <li>Recipient of the "Seal of Biliteracy" for Spanish</li>
-      </ul>
-    </div>
+    <h5><em>HONORS</em></h5>
+      <div>
+        University of Kansas -
+        <ul>
+          <li>School of Engineering Chancellor's Scholarship</li>
+          <li>Honor Roll Fall/Spring 2022</li>
+        </ul>
 
-  <h5><em>EXTRA-CURRICULARS</em></h5>
-    <div>
-      Ground Theory Brazilian Jiu Jitsu -
-      <ul>
-        <li>Current extra-curricular activity</li>
-      </ul>
+        Olathe East High School -
+        <ul>
+          <li>4 year Honor Roll student</li>
+          <li>2021 Most Outstanding Male Athlete</li>
+          <li>Recipient of the "Seal of Biliteracy" for Spanish</li>
+        </ul>
+      </div>
 
-      Olathe East High School -
-      <ul>
-        <li>Varsity Wrestler and team captain, 3x State Qualifier, 1x 3rd place State Placer</li>
-        <li>Varsity Football player and team captain</li>
-      </ul>
+    <h5><em>EXTRA-CURRICULARS</em></h5>
+      <div>
+        Ground Theory Brazilian Jiu Jitsu -
+        <ul>
+          <li>Current extra-curricular activity</li>
+        </ul>
 
-      Boy Scouts of America -
-      <ul>
-        <li>8 year participant</li>
-      </ul>
-    </div>
+        Olathe East High School -
+        <ul>
+          <li>Varsity Wrestler and team captain, 3x State Qualifier, 1x 3rd place State Placer</li>
+          <li>Varsity Football player and team captain</li>
+        </ul>
 
-    <div class = "links">
-      <%= link_to 'Home', resume_path %>
-      <%= link_to 'Contact Me', contact_me_path %>
-      <%= link_to 'Experience', experience_path %>
-      <%= link_to 'Education', education_path %>
-      <%= link_to 'Projects', projects_path %>
-    </div>
+        Boy Scouts of America -
+        <ul>
+          <li>8 year participant</li>
+        </ul>
+      </div>
 
-</body>
+      <div class = "links">
+        <%= link_to 'Home', resume_path %>
+        <%= link_to 'Contact Me', contact_me_path %>
+        <%= link_to 'Experience', experience_path %>
+        <%= link_to 'Education', education_path %>
+        <%= link_to 'Projects', projects_path %>
+      </div>
+
+  </body>
 
 
 </html>
