Created actual links in the Contact Me page. In Work Experience page, began adding icons for each job and pop up boxes with the job descriptions.

--- a/app/views/experience/show_experience.html.erb
+++ b/app/views/experience/show_experience.html.erb
@@ -3,6 +3,8 @@
   <head>
     <title>My Website</title>
     <%= stylesheet_link_tag 'application', media: 'all' %>
+    <%= stylesheet_link_tag 'experience', media: 'all' %>
+
   </head>
 
 
@@ -13,30 +15,44 @@
       <h1>Work Experience</h1>
     </div>
 
-    <div>
-      Logie's on Mass, Lawrence, KS — Security <br>
-      October 2022 - Current <br>
-      <ul>
-        <li>Interact with roughly 1000 members of the public every shift</li>
-        <li>Navigate stressful and chaotic situations in a calm and professional manner</li>
-        <li>Communicate and collaborate efficiently  with coworkers to maintain a safe environment for patrons</li>
-      </ul>
 
-      Jersey Mike's, Lenexa, KS — Cook, Cashier <br>
-      March 2020 - August 2022 <br>
-      <ul>
-        <li>Delegated assignments as shift needs arose </li>
-        <li>Handled first wave of customer relations in a busy environment </li>
-        <li>Contributed to an organized workplace by being detail-oriented and providing customers with an excellent experience </li>
-        <li>Maintained my own schedule </li>
-      </ul>
+    <div class="job-icon">
+      <img src="experience_images/logies.jpeg" alt="Logie's">
+      <div class="job-info">
+        <h2>Logie's on Mass, Lawrence, KS — Security <br>
+            October 2022 - Current</h2>
+        <ul>
+          <li>Interact with roughly 1000 members of the public every shift</li>
+          <li>Navigate stressful and chaotic situations in a calm and professional manner</li>
+          <li>Communicate and collaborate efficiently with coworkers to maintain a safe environment for patrons</li>
+        </ul>
+      </div>
+    </div>
 
-      Avena Freelance Landscaping, Overland Park, KS — Co-Founder <br>
-      Summer 2016 - October 2020 <br>
-      <ul>
-        <li>Created and maintained a network of weekly clients </li>
-        <li>  Utilized time management and organizational skills to meet deadlines </li>
-      </ul>
+    <div class="job-icon">
+      <img src="experience_images/jersey_mikes.png" alt="Jersey Mike's">
+      <div class="job-info">
+        <h2>Jersey Mike's, Lenexa, KS — Cook, Cashier <br>
+            March 2020 - August 2022</h2>
+        <ul>
+          <li>Delegated assignments as shift needs arose</li>
+          <li>Handled first wave of customer relations in a busy environment</li>
+          <li>Contributed to an organized workplace by being detail-oriented and providing customers with an excellent experience</li>
+          <li>Maintained my own schedule</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="job-icon">
+      <img src="experience_images/avena_freelance.png" alt="Avena Freelance">
+      <div class="job-info">
+        <h2>Avena Freelance Landscaping, Overland Park, KS — Co-Founder <br>
+            Summer 2016 - October 2020</h2>
+        <ul>
+          <li>Created and maintained a network of weekly clients</li>
+          <li>Utilized time management and organizational skills to meet deadlines</li>
+        </ul>
+      </div>
     </div>
 
     <div class = "links">
