--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,6 +22,14 @@
   background-attachment: fixed;
 }
 
+h1 {
+  color: rgb(230, 230, 230);
+  font-size: 4rem;
+  text-align: center;
+  text-shadow: 3px 3px 2px rgba(0,0,0,0.5);
+}
+
+
  .links{
   position: absolute;
   bottom: 0;
@@ -42,6 +50,26 @@
 }
 
 .page_title {
-  font-family: Georgia, Arial;
+  font-family: Verdana, sans-serif;
   font-size: 16px;
+}
+
+.contact_info {
+  font-family: Verdana, sans-serif;
+  font-size: 35px;
+  color: #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 20vh;
+}
+
+.contact_info a {
+  text-decoration: none;
+  color: rgb(50, 71, 84);
+  transition: color 0.2s ease-in-out;
+}
+
+.contact_info a:hover {
+  color: rgb(98, 0, 238);
 }
