--- a/app/views/contact_me/show_contact.html.erb
+++ b/app/views/contact_me/show_contact.html.erb
@@ -11,19 +11,28 @@
       <h1>Contact Me</h1>
     </div>
 
-    <div>
-      jaxonavena@gmail.com <br>
-      LinkedIn - Jaxon Avena <br>
-      Github - jaxonavena <br>
+    <div class="contact_info">
+      <a href="mailto:jaxonavena@gmail.com" target="_blank">jaxonavena@gmail.com</a>
     </div>
 
-      <div class = "links">
-        <%= link_to 'Home', resume_path %>
-        <%= link_to 'Experience', experience_path %>
-        <%= link_to 'Education', education_path %>
-        <%= link_to 'Projects', projects_path %>
-        <%= link_to 'About Me', about_me_path %>
-      </div>
+    <div class = "contact_info">
+      <a href="https://www.linkedin.com/in/jaxon-avena2023" target="_blank">LinkedIn - Jaxon Avena</a>
+    </div>
+
+    <div class = "contact_info">
+      <a href="https://github.com/jaxonavena" target="_blank">Github - jaxonavena</a>
+    </div>
+
+
+
+
+    <div class = "links">
+      <%= link_to 'Home', resume_path %>
+      <%= link_to 'Experience', experience_path %>
+      <%= link_to 'Education', education_path %>
+      <%= link_to 'Projects', projects_path %>
+      <%= link_to 'About Me', about_me_path %>
+    </div>
   </body>
 
 </html>
