--- a/app/views/education/show_education.html.erb
+++ b/app/views/education/show_education.html.erb
@@ -23,6 +23,28 @@
       August 2017 - May 2021
     </div>
 
+    <h5><em>SOFT SKILLS</em></h5>
+      <div>
+        <ul>
+          <li>Leadership</li>
+          <li>Problem solving</li>
+          <li>Effective communicator</li>
+          <li>Creative</li>
+        </ul>
+      </div>
+
+    <h5><em>HARD SKILLS</em></h5>
+      <div>
+        <ul>
+          <li>Python</li>
+          <li>C/C++ fundamentals</li>
+          <li>HTML and CSS fundamentals</li>
+          <li>Ruby and Ruby on Rails fundamentals</li>
+          <li>Git</li>
+          <li>UML</li>
+        </ul>
+      </div>
+
     <div class = "links">
       <%= link_to 'Home', resume_path %>
       <%= link_to 'Contact Me', contact_me_path %>
