Laid out and beautified projects page. Added links to projects.

--- a/app/views/projects/show_projects.html.erb
+++ b/app/views/projects/show_projects.html.erb
@@ -12,21 +12,23 @@
       <h1>Projects</h1>
     </div>
 
-    <div>
-      Geodle — KU Hackathon, Spring 2022<br>
-      <ul>
-        <li>Developed a simple geography focused, educational game from scratch in 36 hours  based off of the popular game "Wordle"</li>
-        <li>Implemented entirely with Python, including the GUI using the pygame library</li>
-        <li>Worked as part of a three man team</li>
-        <li>Received $1000 for winning "Most Promising Start-Up"</li>
-      </ul>
+    <div class= "project">
+      <h2>Geodle — KU Hackathon, Spring 2022</h2>
+      <p>Developed a simple geography focused, educational game from scratch in 36 hours based off of the popular game "Wordle"</p>
+      <p>Implemented entirely with Python, including the GUI using the pygame library</p>
+      <p>Worked as part of a three man team</p>
+      <p>Received $1000 for winning "Most Promising Start-Up"</p>
+      <a href="https://devpost.com/software/geodle" target="_blank">Visit Geodle on Devpost!</a>
     </div>
 
-    <div>
-      This Website - Spring 2023<br>
-      <ul>
-        <li>Built my first Ruby on Rails web app</li>
-      </ul>
+
+    <div class = "project">
+      <h2>This Website - Spring 2023</h2>
+      <p>Built my first Ruby on Rails web app</p>
+      <p>Learned to navigate the Rails framework</p>
+      <p>Utilized basic HTML and CSS to generate visually appealing web pages</p>
+      <p>Practiced the core functionalities of Git in complement to Github repositories</p>
+      <%= link_to 'Visit the home page!', resume_path %>
     </div>
 
     <div class = "links">
