--- a/app/views/projects/show_projects.html.erb
+++ b/app/views/projects/show_projects.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title>My Website</title>
     <%= stylesheet_link_tag 'application', media: 'all' %>
+    <%= stylesheet_link_tag 'projects', media: 'all' %>
   </head>
 
 
@@ -16,7 +17,7 @@
       <h2>This Website - Spring 2023</h2>
       <p>Built my first Ruby on Rails web app</p>
       <p>Learned to navigate the Rails framework</p>
-      <p>Utilized basic HTML and CSS to generate visually appealing web pages</p>
+      <p>Utilized HTML and CSS to generate visually appealing web pages</p>
       <p>Practiced the core functionalities of Git in complement to Github repositories</p>
       <%= link_to 'Visit the home page!', resume_path %>
     </div>
