--- a/app/views/experience/show_experience.html.erb
+++ b/app/views/experience/show_experience.html.erb
@@ -15,9 +15,9 @@
       <h1>Work Experience</h1>
     </div>
 
-
+  <div class="job-icons-container">
     <div class="job-icon">
-      <img src="experience_images/logies.jpeg" alt="Logie's">
+      <img src="/images/logies.jpeg" alt="Logie's">
       <div class="job-info">
         <h2>Logie's on Mass, Lawrence, KS — Security <br>
             October 2022 - Current</h2>
@@ -30,7 +30,7 @@
     </div>
 
     <div class="job-icon">
-      <img src="experience_images/jersey_mikes.png" alt="Jersey Mike's">
+      <img src="/images/jersey_mikes.png" alt="Jersey Mikes">
       <div class="job-info">
         <h2>Jersey Mike's, Lenexa, KS — Cook, Cashier <br>
             March 2020 - August 2022</h2>
@@ -44,7 +44,7 @@
     </div>
 
     <div class="job-icon">
-      <img src="experience_images/avena_freelance.png" alt="Avena Freelance">
+      <img src="/images/avena_freelance.png" alt="Avena Freelance">
       <div class="job-info">
         <h2>Avena Freelance Landscaping, Overland Park, KS — Co-Founder <br>
             Summer 2016 - October 2020</h2>
@@ -54,6 +54,7 @@
         </ul>
       </div>
     </div>
+
 
     <div class = "links">
       <%= link_to 'Home', resume_path %>
