--- a/app/assets/stylesheets/education.css
+++ b/app/assets/stylesheets/education.css
@@ -1,11 +1,10 @@
 
 
 .school {
-	background: rgba(0, 75, 141, 0.8);
+	background: rgba(41, 95, 232, 0.3);
 	color: white;
 	padding: 40px;
 	position: relative;
-	transform: skewY(-5deg);
 	margin-bottom: 50px;
 }
 
@@ -19,7 +18,7 @@
 	height: 0;
 	border-style: solid;
 	border-width: 0 0 20px 20px;
-	border-color: transparent transparent rgba(44, 62, 80, 0.8) transparent;
+	border-color: transparent transparent rgba(41, 95, 232, 0.65) transparent;
 	transform: rotate(45deg);
 }
 
@@ -29,13 +28,15 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 50px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .skill-box {
   width: 30%;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   border-radius: 10px;
-  padding: 20px;
+  padding: 15px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease-in-out;
 }
@@ -55,5 +56,5 @@
 
 .soft-skills,
 .hard-skills {
-  width: 45%;
+  width: 30%;
 }
